RESOLVED FIXED133063
Fix the quirks mode selector matching of the pseudo classes :hover and :active
https://bugs.webkit.org/show_bug.cgi?id=133063
Summary Fix the quirks mode selector matching of the pseudo classes :hover and :active
Benjamin Poulain
Reported 2014-05-18 22:29:43 PDT
Fix the quirks mode selector matching of the pseudo classes :hover and :active
Attachments
Patch (35.96 KB, patch)
2014-05-18 22:54 PDT, Benjamin Poulain
no flags
Patch (45.87 KB, patch)
2014-05-26 00:24 PDT, Benjamin Poulain
koivisto: review+
Benjamin Poulain
Comment 1 2014-05-18 22:54:02 PDT
Benjamin Poulain
Comment 2 2014-05-19 15:05:36 PDT
Comment on attachment 231677 [details] Patch I got to test Internet Explorer today, it does not follow Firefox. Let's go with http://quirks.spec.whatwg.org/#the-:active-and-:hover-quirk instead. It is very similar to what we had before.
Benjamin Poulain
Comment 3 2014-05-26 00:24:56 PDT
Benjamin Poulain
Comment 4 2014-05-26 00:26:27 PDT
As discussed with Antti on IRC, it is better to follow the spec, especially since the spec is a generalization of our old behavior.
Antti Koivisto
Comment 5 2014-05-26 05:07:32 PDT
Comment on attachment 232064 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=232064&action=review r=me > Source/WebCore/css/SelectorChecker.cpp:361 > + // In quirks mode, a compound selector selector that matches the following conditions must not match elements that would not also match the ':any-link' selector. The second selector in "a compound selector selector" could use single quotes around it (the original uses italics). > LayoutTests/ChangeLog:9 > + The test coverage of :hover and :active was extremly poor. > + Those new tests add coverage for the cases fixed by this patch. Thanks for extensive tests!
Antti Koivisto
Comment 6 2014-05-26 05:24:22 PDT
Comment on attachment 232064 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=232064&action=review > Source/WebCore/ChangeLog:32 > + Tests: fast/selectors/active-hover-quirks.html > + fast/selectors/active-quirks.html > + fast/selectors/hover-quirks.html It might be good to also land the same tests in standards mode to document the behavior.
Benjamin Poulain
Comment 7 2014-05-26 14:46:19 PDT
Note You need to log in before you can comment on or make changes to this bug.