Source/WebCore/css/SelectorChecker.h
@@ -2,7 +2,7 @@
  * Copyright (C) 1999 Lars Knoll (knoll@kde.org)
  *           (C) 2004-2005 Allan Sandfeld Jensen (kde@carewolf.com)
  * Copyright (C) 2006, 2007 Nicholas Shanks (webkit@nickshanks.com)
- * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014 Apple Inc. All rights reserved.
  * Copyright (C) 2007 Alexey Proskuryakov <ap@webkit.org>
  * Copyright (C) 2007, 2008 Eric Seidel <eric@webkit.org>
  * Copyright (C) 2008, 2009 Torch Mobile Inc. All rights reserved. (http://www.torchmobile.com/)
@@ -61,8 +61,9 @@ public:
             , pseudoId(NOPSEUDO)
             , elementStyle(0)
             , scrollbar(0)
+            , firstSelectorOfTheFragment(selector)
             , scrollbarPart(NoPart)
-            , isSubSelector(false)
+            , inFunctionalPseudoClass(false)
             , hasScrollbarPseudo(false)
             , hasSelectionPseudo(false)
         { }
@@ -74,8 +75,9 @@ public:
         PseudoId pseudoId;
         RenderStyle* elementStyle;
         RenderScrollbar* scrollbar;
+        const CSSSelector* firstSelectorOfTheFragment;
         ScrollbarPart scrollbarPart;
-        bool isSubSelector;
+        bool inFunctionalPseudoClass;
         bool hasScrollbarPseudo;
         bool hasSelectionPseudo;
     };
